--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #ff4d4d;
+            background-color: #f5f5f5;
             color: #333;
             text-align: center;
             padding: 50px;
         }
 
-        h1, h2 {
-            color: white;
+        h1 {
+            color: #2c3e50;
             margin: 0 0 10px;
         }
 
+        h2 {
+            color: #34495e;
+            margin: 0 0 20px;
+        }
+
         p {
-            color: #fefefe;
+            color: #555;
             font-size: 18px;
             margin-bottom: 20px;
         }
@@ -32,12 +37,12 @@
         }
 
         li {
-            background-color: #ffffff;
-            color: #393;
+            background-color: #ecf0f1;
+            color: #2c3e50;
             margin: 10px 0;
             padding: 10px;
             border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             font-size: 16px;
             text-align: left;
         }
@@ -49,7 +54,7 @@
 
         button {
             padding: 12px 20px;
-            background-color: #28a745;
+            background-color: #3498db;
             color: white;
             font-size: 16px;
             border: none;
@@ -59,12 +64,12 @@
         }
 
         button:hover {
-            background-color: #218838;
+            background-color: #2980b9;
         }
 
         footer {
             margin-top: 30px;
-            color: #555;
+            color: #7f8c8d;
             font-size: 14px;
         }
     </style>
