--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <ul>
         <li><strong>Date:</strong> 25th January 2025</li>
         <li><strong>Time:</strong> 5:00 PM</li>
-        <li><strong>Location:</strong> 123 Event Street, Your City</li>
+        <li><strong>Location:</strong> 14 Bedford Row, London EC1N 2PB</li>
         <li><strong>Dress Code:</strong> Casual Attire</li>
         <li><strong>RSVP by:</strong> 20th January 2025</li>
     </ul>
@@ -91,7 +91,7 @@
     <button>RSVP Now</button>
 
     <footer>
-        <p>&copy; 2025 Event Organizers. All Rights Reserved.</p>
+        <p>&copy; 2025 Abdullah. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
