--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 </head>
 <body>
     <h1>You're Invited!</h1>
-    <h2>To Our Special Event</h2>
+    <h2>To Our ITD workshop Event</h2>
 
-    <p>We are thrilled to invite you to our special event. Here are the details:</p>
+    <p>We are thrilled to invite you to our ITD workshop event. Here are the details:</p>
 
     <ul>
         <li><strong>Date:</strong> 25th January 2025</li>
